<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back"
    tools:context=".login_activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:srcCompat="@drawable/logop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="32dp"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_correo_electronico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:background="@drawable/shape_contorno"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:shadowColor="@color/light"
            android:textColor="@color/light"
            android:textColorHighlight="@color/light"
            android:textColorHint="@color/light"
            android:textColorLink="@color/light"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/shape_contorno"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:shadowColor="@color/light"
            android:textColor="@color/light"
            android:textColorHighlight="@color/light"
            android:textColorHint="@color/light"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/light"
            android:textColorLink="#000000"
            app:strokeColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_weight="0.01"
            android:text="@string/no_tienes_cuenta"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/crear_una"
            android:textColor="@color/white"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>
</LinearLayout>