<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/comic_anime"
            android:textColor="@color/back"
            android:textSize="38dp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:id="@+id/ly_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView


                android:id="@+id/tv_events_main"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/eventos"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_event_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/ver_todo"
                android:textColor="@color/light"
                android:textStyle="italic" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="12dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/event_slider_home"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:iss_auto_cycle="true"
                app:iss_delay="2000"
                app:iss_period="2000"
                app:iss_text_align="CENTER"
                tools:ignore="MissingClass" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Tienda"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_store_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/ver_todo"
                android:textColor="@color/light"
                android:textStyle="italic" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_tienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/icnons" />




</androidx.constraintlayout.widget.ConstraintLayout>




